--- a/index.html
+++ b/index.html
@@ -77,6 +77,23 @@
           </div>
         </div>
       </header>
+
+      <!-- Featured Products Section -->
+
+      <section class="py-8 lg:py-24">
+        <!-- Title -->
+        <div class="text-center mb-8">
+          <h3 class="text-3xl md:text-4xl font-bold mb-2">
+            Our Featured Products
+          </h3>
+          <p class="text-gray-600 max-w-md mx-auto">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even slightly
+            believable.
+          </p>
+        </div>
+      </section>
     </main>
   </body>
 </html>
